istio-samples/08-http-rewrite-by-header/vs.yml
# https://istio.io/latest/docs/reference/config/networking/virtual-service/#HTTPMatchRequest

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-header-route
  namespace: myistio
spec:
  gateways: # 选择 gateway
    - istio-tangx-in
  hosts:
    - istio.tangx.in
  http:
  - name: "prod-route"
    match:
    - headers:
        app:
          prefix: x-prod  # 使用 前缀模式
      uri:                # 为了更好的展示 header 路由。 这里配合 uri 的精确匹配模式
        exact: /
    rewrite:
      uri: /prod/list
    route:
    - destination:
        host: svc-prod

  - name: "review-route"
    match:
    - headers:
        app:
          exact: review   # 使用精确模式
      uri:
        exact: /
    rewrite:
      uri: /review/all
    route:
    - destination:
        host: svc-review

## 一些违反规则的测试 ###
  # The keys uri, scheme, method, and authority will be ignored.
  # 其实不会被忽略
  - name: "key (uri) in header"
    match:
    - headers:
        uri:    
          exact: "app"
      uri:
        exact: /
    rewrite:
      uri: /review/all
    route:
    - destination:
        host: svc-review

  # The header keys must be lowercase and use hyphen as the separator, e.g. x-request-id.
  # 其实可以为大写
  - name: "uppercase in keys"
    match:
    - headers:
        SrvReview:    
          exact: "review"
      uri:
        exact: /
    rewrite:
      uri: /review/all
    route:
    - destination:
        host: svc-review

  # If the value is empty and only the name of header is specfied, presence of the header is checked.
  - name: "key without value"
    match:
    - headers:
        onlykey:
          prefix: ""   # 有 key 没有 value
      uri:
        exact: /
    rewrite:
      uri: /review/all
    route:
    - destination:
        host: svc-review
